--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 lto = true
 codegen-units = 1
 
+[profile.dev.package.sqlx-macros]
+opt-level = 3
+
 [dependencies]
 anyhow = "1.0.75"
 axum = { version = "0.6.20", features = ["headers"] }
