--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "auth_lite"
 version = "0.1.0"
 edition = "2021"
+description = "A simple authentication server"
+license = "MIT"
+repository = "https://github.com/jtdowney/auth_lite"
+homepage = "https://github.com/jtdowney/auth_lite"
+categories = ["authentication", "command-line-utilities"]
 
 [profile.release]
 lto = true
